--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+#Netbeans stuff
 /nbproject/private/
 build.xml
 manifest.mf
@@ -29,3 +31,7 @@ nbproject/genfiles.properties
 nbproject/project.properties
 nbproject/project.xml
 /build/
+
+#Input and output files
+res/input.txt
+res/output.txt
